# konst

./: .gitignore  Cargo.toml  Changelog.md  README.md  script.sh
konst/: Cargo.toml  README.md
konst/src/: __utils.rs  alloc_type.rs  array.rs  chr.rs  cmp.rs  docs.rs  doctests.rs  drop_flavor.rs  ffi.rs  iter.rs  lib.rs  macros.rs  manually_drop.rs  maybe_uninit.rs  option.rs  parsing.rs  polymorphism.rs  primitive.rs  ptr.rs  range.rs  result.rs  root_module_macros.rs  slice.rs  string.rs  utils.rs  utils_156.rs
konst/src/array/: __array_macros_2.rs  array_builder.rs  array_consumer.rs  array_into_iter.rs
konst/src/cmp/: cmp_wrapper.rs  coerce_to_cmp_macros.rs  const_cmp.rs  const_eq_macros.rs  const_ltgt_macros.rs  const_ord_macros.rs  impl_cmp_macro.rs  minmax_macros.rs
konst/src/docs/: type_witnesses.rs
konst/src/ffi/: cstr.rs
konst/src/ffi/cstr/: err_tests.rs
konst/src/iter/: collect_const.rs  combinator_methods.rs  for_each_macro.rs  internal_iter_macros.rs  iter_eval.rs  iter_eval_macro.rs  iterator_adaptors.rs  iterator_dsl.rs  step.rs
konst/src/iter/iter_eval_macro/: iter_eval_helpers.rs
konst/src/macros/: assert_cmp_macros.rs  assert_macros.rs  bytes_fn_macros.rs  const_eq_macros.rs  const_ord_macros.rs  control_flow.rs  declare_cmp_fn_macros.rs  destructuring.rs  destructuring_rec.rs  impl_cmp.rs  internal_macros.rs  minmax_macros.rs  parse_any.rs  parse_closures.rs  parser_method.rs  parsing_macros.rs  parsing_polymorphism_macros.rs  polymorphism_macros.rs  unwrapping.rs
konst/src/nonzero/: cmp.rs
konst/src/option/: option_iterators.rs
konst/src/other/: cmp.rs
konst/src/parsing/: get_parser.rs  non_parsing_methods.rs  parse_errors.rs  parser_method_macro.rs  parsing_polymorphism_macros.rs  primitive_parsing.rs
konst/src/polymorphism/: cmp_wrapper.rs  const_cmp_marker.rs  type_eq_.rs  type_eq_projection_fn.rs
konst/src/primitive/: cmp.rs  parse.rs
konst/src/range/: cmp.rs  one_sided_range.rs  range_into_iter.rs
konst/src/slice/: bytes_pattern.rs  cmp.rs  slice_as_chunks.rs  slice_concatenation.rs  slice_const_methods.rs  slice_filler.rs  slice_is_sorted_methods.rs  slice_iter_methods.rs  slice_split_off.rs
konst/src/string/: chars_methods.rs  concatenation.rs  pattern.rs  priv_string_tests.rs  split_once.rs  split_terminator_items.rs  splitting.rs
konst/tests/: test_modules.rs
konst/tests/misc_tests/: array_tests.rs  char_tests.rs  cmp_tests.rs  drop_flavor_tests.rs  ffi_tests.rs  iter_mod.rs  macro_tests.rs  manually_drop_tests.rs  maybe_uninit_tests.rs  minmax_tests.rs  option_tests.rs  parser.rs  primitive_tests.rs  ptr_tests.rs  range_and_nonzero_tests.rs  result_tests.rs  slice_const_method_tests.rs  slice_tests.rs  string_tests.rs  test_macros.rs  test_utils.rs  type_eq_tests.rs  ui_tests.rs
konst/tests/misc_tests/array_helpers_ui_tests/: array_builder_const_panics-err.rs  array_builder_const_panics-err.stderr
konst/tests/misc_tests/array_macros2_ui_tests/: drop_type_from_fn_nd_err.rs  drop_type_from_fn_nd_err.stderr  drop_type_map_nd_err.rs  drop_type_map_nd_err.stderr  non_local_return_from_fn_err.rs  non_local_return_from_fn_err.stderr  non_local_return_map_err.rs  non_local_return_map_err.stderr
konst/tests/misc_tests/array_tests/: array_builder_tests.rs  array_cmp_tests.rs  array_consumer_tests.rs  array_map2_tests.rs
konst/tests/misc_tests/array_ui_tests/: non_copy_type_in_from_fn_err.rs  non_copy_type_in_from_fn_err.stderr  non_copy_type_in_map_err.rs  non_copy_type_in_map_err.stderr
konst/tests/misc_tests/cmp_macros_ui_tests/: cmp_comparison_for_macros_comparator1_type_err.rs  cmp_comparison_for_macros_comparator1_type_err.stderr  cmp_comparison_for_macros_comparator2_type_err.rs  cmp_comparison_for_macros_comparator2_type_err.stderr  cmp_comparison_for_macros_comparator_syntax_err.rs  cmp_comparison_for_macros_comparator_syntax_err.stderr  cmp_comparison_for_macros_comparator_type_err.stderr  cmp_comparison_for_macros_nocomparator_syntax_err.rs  cmp_comparison_for_macros_nocomparator_syntax_err.stderr  cmp_comparison_for_macros_noncomparator_type_err.rs  cmp_comparison_for_macros_noncomparator_type_err.stderr  cmp_comparison_macros_syntax_err.rs  cmp_comparison_macros_syntax_err.stderr  cmp_comparison_macros_type_err.rs  cmp_comparison_macros_type_err.stderr  cmp_other_macros_syntax_err.rs  cmp_other_macros_syntax_err.stderr  cmp_other_macros_type_err.rs  cmp_other_macros_type_err.stderr  minmax_syntax_err.rs  minmax_syntax_err.stderr  minmax_type_err.rs  minmax_type_err.stderr
konst/tests/misc_tests/cmp_tests/: cmp_macros.rs  comparison_macro_tests.rs  minmax_tests.rs  misc_std_cmp_impls.rs
konst_kernel/: Cargo.toml  LICENSE-ZLIB.md
konst_kernel/src/: __unsafe_utils.rs  char_formatting.rs  chr.rs  collect_const.rs  into_iter.rs  iter.rs  lib.rs  macros.rs  maybe_uninit.rs  polymorphism.rs  slice.rs  step_kk.rs  string.rs  type_eq.rs  utils.rs
konst_kernel/src/chr/: char_formatting.rs  tests.rs
konst_kernel/src/into_iter/: option_into_iter.rs  range_into_iter.rs  slice_into_iter.rs
konst_kernel/src/iter/: combinator_methods.rs  iter_adaptors.rs  iter_eval_macro.rs
konst_kernel/src/macros/: array_macros.rs  control_flow.rs  internal_macros.rs  into_iter_macros.rs  option_macros_.rs  result_macros_.rs
konst_kernel/src/slice/: slice_for_konst.rs
konst_kernel/src/string/: string_for_konst.rs
konst_kernel/src/type_eq/: make_project_fn.rs
konst_kernel/src/utils/: utils_tests.rs
konst_macro_rules/: Cargo.toml
konst_macro_rules/src/: array_macros.rs  collect_const.rs  internal_macros.rs  into_iter.rs  iter.rs  lib.rs  option_macros_.rs  result_macros_.rs  slice_.rs  string.rs  type_eq.rs  utils.rs  utils_1_56.rs
konst_macro_rules/src/into_iter/: range_into_iter.rs  slice_into_iter.rs
konst_macro_rules/src/iter/: combinator_methods.rs  iter_eval_macro.rs
konst_proc_macros/: Cargo.toml  LICENSE-ZLIB.md
konst_proc_macros/src/: destructuring.rs  lib.rs  parsing.rs  parsing_bstr.rs  patterns.rs  utils.rs
konst_proc_macros/src/parsing/: parsing_tests.rs
src/: __for_cmp_impls.rs  lib.rs  (+10 more)
(+228 files in other folders)
