[package]
name = "const_cmp"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "For comparing strings and slices at compile-time"
documentation = "https://docs.rs/const_cmp/"
readme="../README.md"
keywords = ["no-std"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/const_cmp/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../README.md",
    "../LICENSE-ZLIB.md", 
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[features]
default = ["slice_cmp", "other_cmp"]
other_cmp = ["polymorphism"]
slice_cmp = ["str_cmp", "polymorphism"]
str_cmp = ["polymorphism"]
const_generics = []
polymorphism = []