[package]
name = "const_cmp"
version = "0.0.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "For comparing types at compile-time"
documentation = "https://docs.rs/const_cmp/"
readme="./README.md"
keywords = ["no-std"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/const_cmp/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "./README.md",
    "./LICENSE-ZLIB.md", 
]

[dependencies]


[features]
default = ["slice", "nonzero", "option", "range", "primitives", "other", "polymorphism"]

option = ["polymorphism"]
slice = ["str", "polymorphism"]
str = ["polymorphism"]
range = ["polymorphism"]
nonzero = ["polymorphism"]
primitives = ["polymorphism"]
other = ["polymorphism"]

const_generics = []
polymorphism = []