[package]
name = "konst"
version = "0.0.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "Compile-time comparison, parsing, and other const functionality"
documentation = "https://docs.rs/konst/"
readme="./README.md"
keywords = ["no-std"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/konst/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "./README.md",
    "./LICENSE-ZLIB.md", 
]

[dependencies]


[features]
default = [
    "slice", "nonzero", "option", "range", "primitives", "other",
    "polymorphism",
    "parsing",
]

option = ["polymorphism"]
slice = ["str", "polymorphism"]
str = ["polymorphism"]
range = ["polymorphism"]
nonzero = ["polymorphism"]
primitives = ["polymorphism"]
other = ["polymorphism"]
parsing = []

const_generics = []
polymorphism = []