[package]
name = "konst"
version = "0.4.1"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
rust-version = "1.89.0"
edition = "2024"
license = "Zlib"
description = "Const equivalents of std functions, compile-time comparison, iteration, and parsing"
documentation = "https://docs.rs/konst/"
readme="../README.md"
keywords = ["no-std", "const_fn", "parsing"]
categories = ["no-std", "parsing"]
repository = "https://github.com/rodrimati1992/konst/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../README.md",
    "LICENSE-ZLIB.md", 
]


[dependencies.konst_proc_macros]
version = "=0.4.0"
path = "../konst_proc_macros"
optional = true

[dev-dependencies.rand]
version = "0.8.4"
default-features = false
features = ["small_rng"]

# dev-dependencies can't be optional
[dependencies.trybuild]
version = "1.0"
optional = true

[dependencies.typewit]
version = "1.12"
default-features = false
features = ["rust_1_83"]

[dependencies.const_panic]
version = "0.2.13"
features = ["rust_1_88"]

[dev-dependencies.const_panic]
version = "0.2.13"
features = ["rust_1_88", "derive"]

[features]
default = ["cmp", "iter", "parsing_proc"]


# Enables extra checks for debug
debug = []

alloc = []
cmp = []
const_panic_derive = ["const_panic/derive"]
iter = []
parsing = []
parsing_proc = ["parsing", "konst_proc_macros"]

rust_latest_stable = []


# Enables ui tests, which are intended for the latest stable release.
# This is not enabled in CI, because it's way too sensitive to 
# changes in how rustc formats errors
__ui = ["trybuild", "rust_latest_stable"]

docsrs = []



[package.metadata.docs.rs]
features = ["docsrs", "alloc", "const_panic_derive", "cmp", "parsing_proc", "rust_latest_stable"]

