[package]
name = "konst_kernel"
version = "0.3.5"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
rust-version = "1.57.0"
edition = "2021"
license = "Zlib"
description = "Foundational const functionality shared between konst and const_panic"
documentation = "https://docs.rs/konst/"
keywords = ["no-std", "const_fn"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/konst/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "LICENSE-ZLIB.md", 
]


[dependencies.typewit]
version = "1.1"


[dev-dependencies.arrayvec]
default-features = false
version = "0.7"


[features]
debug = []
alloc = []
iter = []
rust_1_64 = ["typewit/rust_1_61"]
docsrs = []
nightly_mut_refs = []
mut_refs = []
__for_konst = ["rust_1_64"]

[package.metadata.docs.rs]
features = ["debug", "rust_1_64"]

