[package]
name = "konst_kernel"
version = "0.3.15"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
rust-version = "1.83.0"
edition = "2021"
license = "Zlib"
description = "Foundational functionality for konst"
documentation = "https://docs.rs/konst/"
keywords = ["no-std", "const_fn"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/konst/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "LICENSE-ZLIB.md", 
]


[dependencies.typewit]
version = "1.5"
features = ["rust_1_61"]


[dev-dependencies.arrayvec]
default-features = false
version = "0.7"


[features]
debug = []
alloc = []
iter = []
docsrs = []

[package.metadata.docs.rs]
features = ["debug"]

