[package]
name = "konst_macro_rules"
version = "0.3.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
rust-version = "1.64.0"
edition = "2021"
license = "Zlib"
description = "Implementation detail of the konst crate"
documentation = "https://docs.rs/konst/"
keywords = []
categories = []
repository = "https://github.com/rodrimati1992/konst/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "LICENSE-ZLIB.md", 
]